Started project webpage

--- a/src/site/resources/css/ferris.css
+++ b/src/site/resources/css/ferris.css
@@ -8,6 +8,11 @@ a#bannerLeft h2 {
     padding-bottom: 30px;
 }
 
+a#bannerLeft img {    
+    padding-bottom: 30px;
+}
+
+
 a {
     color: rgb(98,98,153);
 }
