--- a/src/site/xdoc/installation.xml.vm
+++ b/src/site/xdoc/installation.xml.vm
@@ -4,7 +4,7 @@
           xsi:schemaLocation="http://maven.apache.org/XDOC/2.0 http://maven.apache.org/xsd/xdoc-2.0.xsd">
 
     <properties>
-        <title>Ferris Mouser</title>
+        <title>Ferris ClipJ</title>
         <author email="mjremijan@yahoo.com">Michael Remijan</author>
     </properties>
 
@@ -17,7 +17,7 @@
                 Unzip <code>${project.build.finalName}-${ferrisWindowsAssemblyId}.zip</code>.
             </p>
             <p>
-                Installation complete!  Next is <a href="running.html" alt="running">running</a>
+                Installation complete!  Next is <a href="configuration.html" alt="configuration">configuration</a>
             </p>
         </section>
     </body>
